--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://arquisoft.github.io/viade_0/",
   "private": true,
   "dependencies": {
+    "@inrupt/solid-react-components": "0.5.0",
     "@solid/react": "^1.8.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -12,7 +13,8 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
     "shx": "0.3.2",
-    "solid-auth-client": "^2.4.1"
+    "solid-auth-client": "^2.4.1",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^5.1.2"
   }
 }
