--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "dependencies": {
     "@inrupt/solid-react-components": "0.5.0",
+    "@solid/context": "^1.1.0",
+    "@solid/query-ldflex": "^2.9.0",
     "@solid/react": "^1.8.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
