--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "leaflet": "^1.6.0",
     "mdbreact": "^4.25.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-leaflet": "^2.6.1",
     "react-scripts": "3.3.0",
     "shx": "0.3.2",
     "solid-auth-client": "^2.4.1",
