--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "homepage": "https://arquisoft.github.io/viade_0/",
   "private": true,
   "dependencies": {
-    "@inrupt/solid-react-components": "0.5.0",
+    "@inrupt/solid-react-components": "^0.5.0",
     "@solid/context": "^1.1.0",
     "@solid/query-ldflex": "^2.9.0",
     "@solid/react": "^1.8.0",
@@ -21,6 +21,7 @@
     "react-scripts": "3.3.0",
     "shx": "0.3.2",
     "solid-auth-client": "^2.4.1",
+    "solid-file-client": "^1.0.2",
     "styled-components": "^4.1.3"
   },
   "scripts": {
