--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-leaflet": "^2.6.1",
     "react-scripts": "3.3.0",
     "shx": "0.3.2",
+    "solid": "^0.2.1",
     "solid-auth-client": "^2.4.1",
     "styled-components": "^4.1.3"
   },
