--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "bootstrap": "^4.4.1",
     "leaflet": "^1.6.0",
     "mdbreact": "^4.25.2",
+    "rdflib": "^1.0.6",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-leaflet": "^2.6.1",
     "react-scripts": "3.3.0",
     "shx": "0.3.2",
+    "solid-auth-cli": "^1.0.10",
     "solid-auth-client": "^2.4.1",
     "styled-components": "^4.1.3"
   },
