--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "@solid/query-ldflex": "^2.9.0",
     "@solid/react": "^1.8.0",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
+    "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "leaflet": "^1.6.0",
     "mdbreact": "^4.25.2",
     "rdflib": "^1.0.6",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0-beta.17",
+    "react-dom": "^16.13.0",
     "react-leaflet": "^2.6.1",
     "react-scripts": "3.3.0",
     "shx": "0.3.2",
     "solid-auth-cli": "^1.0.10",
     "solid-auth-client": "^2.4.1",
+    "solid-file-client": "^1.0.2",
     "styled-components": "^4.1.3"
   },
   "scripts": {
