--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
     "leaflet": "^1.6.0",
     "mdbreact": "^4.25.2",
     "rdflib": "^1.0.6",
