--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "reactjs-popup": "^1.5.0",
     "shx": "0.3.2",
     "solid": "^0.2.1",
+    "solid-auth-cli": "^1.0.10",
     "solid-auth-client": "^2.4.1",
     "solid-file-client": "^1.0.2",
     "styled-components": "^4.1.3"
