First partial version Parser RDF to Route Object
- We are using a modificated version of sparql_fiddle lib.(Only sintaxs
changes)
- We are using SPARQL
- We dont have de full query to get the points of the route

--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "jsonld": "^3.0.1",
     "leaflet": "^1.6.0",
     "mdbreact": "^4.25.3",
+    "rdflib": "^1.0.6",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
