--- a/package.json
+++ b/package.json
@@ -13,23 +13,20 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
-    "jsonld": "^3.0.1",
     "leaflet": "^1.6.0",
-    "mdbreact": "^4.25.4",
-    "rdflib": "^1.0.6",
+    "mdbreact": "^4.25.3",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
-    "react-leaflet": "^2.6.3",
+    "react-leaflet": "^2.6.1",
     "react-scripts": "3.3.0",
     "reactjs-popup": "^1.5.0",
     "shx": "0.3.2",
     "solid": "^0.2.1",
-    "solid-auth-cli": "^1.0.12",
+    "solid-auth-cli": "^1.0.10",
     "solid-auth-client": "^2.4.1",
     "solid-file-client": "^1.0.2",
-    "styled-components": "^4.1.3",
-    "wrld.js": "^0.1.2180"
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
