--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "jsonld": "^3.0.1",
     "leaflet": "^1.6.0",
     "mdbreact": "^4.25.3",
-    "rdflib": "^1.0.6",
+    "rdflib": "^1.1.0",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.0-beta.17",
+    "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-leaflet": "^2.6.1",
     "react-scripts": "3.3.0",
@@ -29,7 +29,7 @@
     "solid-auth-client": "^2.4.1",
     "solid-file-client": "^1.0.2",
     "styled-components": "^4.1.3",
-    "wrld.js": "^0.1.2179"
+    "wrld.js": "^0.1.2184"
   },
   "scripts": {
     "start": "react-scripts start",
