--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.1",
+    "react-images-upload": "^1.2.8",
     "react-leaflet": "^2.6.1",
     "react-scripts": "3.3.0",
     "reactjs-popup": "^1.5.0",
