--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://arquisoft.github.io/viade_0/",
   "private": true,
   "dependencies": {
+    "@comunica/actor-init-sparql": "^1.10.0",
     "@inrupt/solid-react-components": "^0.5.0",
     "@solid/context": "^1.1.0",
     "@solid/query-ldflex": "^2.10.0",
@@ -14,6 +15,7 @@
     "bootstrap": "^4.4.1",
     "leaflet": "^1.6.0",
     "mdbreact": "^4.25.3",
+    "rdflib": "^1.1.0",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
