--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "solid-auth-cli": "^1.0.12",
     "solid-auth-client": "^2.4.1",
     "solid-file-client": "^1.0.2",
-    "styled-components": "^4.1.3",
-    "wrld.js": "^0.1.2184"
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
