--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "gpx-parse": "^0.10.4",
+    "gpxparser": "^3.0.0",
     "jquery": "^3.4.1",
     "jsonld": "^3.0.1",
     "leaflet": "^1.6.0",
