--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-images-upload": "^1.2.8",
     "react-leaflet": "^2.6.3",
     "react-scripts": "3.4.1",
+    "react-toastify": "^5.5.0",
     "reactjs-popup": "^1.5.0",
     "shx": "0.3.2",
     "solid": "^0.2.1",
