--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@testing-library/react": "^9.5.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.4",
     "react-router-dom": "^5.1.2"
   }
 }
