--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-images-upload": "^1.2.8",
     "react-leaflet": "^2.6.3",
     "react-scripts": "3.4.1",
+    "react-spinners": "^0.8.1",
     "react-toastify": "^5.5.0",
     "reactjs-popup": "^1.5.0",
     "shx": "0.3.2",
