Prueba del ignore codecov

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,37 +1,10 @@
 ignore:
-  - "src/index.js"
-  - "src/components/AuthNavBar/UploadButton/index.js"
-  - "src/components/AuthNavBar/auth-nav-bar.test.js"
-  - "src/components/ErrorBoundary/index.js"
-  - "src/components/NavBar/Login/index.js"
-  - "src/components/NavBar/Register/ProviderItem/index.js"
-  - "src/components/NavBar/Register/index.js"
-  - "src/components/NavBar/index.js"
-  - "src/components/RoutesMap/RouteMap/index.js"
-  - "src/components/RoutesMap/RoutesCarousel/index.js"
-  - "src/components/RoutesMap/RoutesItinerary/index.js"
-  - "src/components/RoutesMap/RoutesTitle/index.js"
-  - "src/components/RoutesMap/index.js"
-  - "src/components/Spacer/index.js"
-  - "src/components/index.js"
-  - "src/containers/FriendsRoutes/index.js"
-  - "src/containers/Home/index.js"
-  - "src/containers/MyRoutes/index.js"
-  - "src/containers/NotFound/index.js"
-  - "src/containers/Profile/index.js"
-  - "src/containers/ShowRoute/index.js"
-  - "src/containers/index.js"
-  - "src/layouts/NotLoggedInLayout/index.js"
-  - "src/layouts/PrivateLayout/index.js"
-  - "src/layouts/PublicLayout/index.js"
-  - "src/layouts/index.js"
-  - "src/services/index.js"
-  - "src/utils/index.js"
-  - "src/viade/Model/index.js"
-  - "src/viade/Parsers/ParserFromRDF/index.js"
-  - "src/viade/Parsers/ParserToRDF/index.js"
-  - "src/viade/Parsers/ParserToRoute/ParsersTypes/index.js"
-  - "src/viade/Parsers/ParserToRoute/index.js"
-  - "src/viade/Parsers/index.js"
-  - "src/viade/index.js"
-  - "src/index.js"
+  - "**/index.js"
+  - "public"
+  - "src/contexts"
+  - "src/docs"
+  - "src/hooks"
+  - "src/layouts"
+  - "src/services"
+  - "src/utils"
+  - "src/viade"
