--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "solid-auth-cli": "^1.0.12",
     "solid-auth-client": "^2.4.1",
     "solid-file-client": "^1.0.4",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "test": "^0.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
