--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@testing-library/react": "^9.5.0",
     "jest-puppeteer": "^4.4.0",
     "jest-puppeteer-preset": "^4.4.0",
+    "jest-dom": "^3.1.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
